Update Info.java